--- a/src/main/resources/application-neon.properties
+++ b/src/main/resources/application-neon.properties
@@ -1,7 +1,7 @@
 # Conexión a Neon Tech (PostgreSQL)
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://ep-twilight-waterfall-adh2pm4g-pooler.c-2.us-east-1.aws.neon.tech/pets?sslmode=require&channelBinding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_ciR1In8OvFYW
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
