--- a/src/main/resources/application-neon.properties
+++ b/src/main/resources/application-neon.properties
@@ -1,7 +1,7 @@
 # Conexión a Neon Tech (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://dpg-d4od5pidbo4c73f0imp0-a.oregon-postgres.render.com:5432/pets?sslmode=require&channelBinding=require
-spring.datasource.username=post2_rpbz_user
-spring.datasource.password=Xw7HvfAx6E5UbjKf5NEFaqh8tflrUQWF
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_ciR1In8OvFYW
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA
