--- a/src/main/resources/application-neon.properties
+++ b/src/main/resources/application-neon.properties
@@ -1,5 +1,5 @@
 # Conexión a Neon Tech (PostgreSQL)
-spring.datasource.url=jdbc:postgresql://dpg-d4od5pidbo4c73f0imp0-a.oregon-postgres.render.com:5432/pets?sslmode=require&channelBinding=require
+spring.datasource.url=jdbc:postgresql://ep-twilight-waterfall-adh2pm4g-pooler.c-2.us-east-1.aws.neon.tech/pets?sslmode=require&channelBinding=require
 spring.datasource.username=neondb_owner
 spring.datasource.password=npg_ciR1In8OvFYW
 spring.datasource.driver-class-name=org.postgresql.Driver
