--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -10,11 +10,12 @@ services:
       - "3309:3306" # 5432:5432
     volumes:
       - mysql_data:/var/lib/mysql # postgres_data:/var/lib/postgresql/data
-      - ./sql:/docker-entrypoint-initdb.d/sql_mysql.sql # ./sql_postgre.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./sql/sql_mysql.sql:/docker-entrypoint-initdb.d/sql_mysql.sql # ./sql_postgre.sql:/docker-entrypoint-initdb.d/init.sql
 
   # 2. Tu API Spring Boot
   backend:
     build: .
+    restart: always
     container_name: api_rest_local
     ports:
       - "8085:8080"
