--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 # Conexión a MySQL (nombre del servicio: mysql-db)
 # jdbc:postgresql://postgres-db:5432/pets
-spring.datasource.url=jdbc:mysql://mysql-db:3306/pets?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql-db:3306/pets
 
 spring.datasource.username=root
 spring.datasource.password=root123
@@ -11,3 +11,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
